assets/css/main.css
/* ... */
	@media screen and (max-width: 980px) {

		/* Basic */

			html, body {
				overflow-x: hidden;
			}

		/* Box */

			.box br {
				display: none;
			}

		/* Header */

			#header {
				display: none;
			}

		/* Banner */

			#banner {
				padding: 12em 0 12em 0;
			}

		/* Nav */

			#nav {
				display: none;
			}

		/* Main */

			#main {
				border-top-width: 20px;
			}

		/* Sidebar */

			.sidebar {
				border-top: solid 2px #e7eae8;
				padding-top: 50px;
			}

		/* Nav */

			body {
				padding-top: 44px;
			}

				body.homepage {
					padding-top: 0;
				}

			#page-wrapper {
				-moz-backface-visibility: hidden;
				-webkit-backface-visibility: hidden;
				-ms-backface-visibility: hidden;
				backface-visibility: hidden;
				-moz-transition: -moz-transform 0.5s ease;
				-webkit-transition: -webkit-transform 0.5s ease;
				-ms-transition: -ms-transform 0.5s ease;
				transition: transform 0.5s ease;
				padding-bottom: 1px;
			}

			#titleBar {
				-moz-backface-visibility: hidden;
				-webkit-backface-visibility: hidden;
				-ms-backface-visibility: hidden;
				backface-visibility: hidden;
				-moz-transition: -moz-transform 0.5s ease;
				-webkit-transition: -webkit-transform 0.5s ease;
				-ms-transition: -ms-transform 0.5s ease;
				transition: transform 0.5s ease;
				display: block;
				height: 44px;
				left: 0;
				position: fixed;
				top: 0;
				width: 100%;
				z-index: 10001;
				background-color: rgba(21, 38, 23, 0.8);
				background-image: url("images/overlay.png");
			}

				#titleBar .title {
					display: block;
					position: relative;
					font-family: 'Open Sans Condensed', sans-serif;
					font-weight: 700;
					text-transform: uppercase;
					font-size: 1.25em;
					line-height: 44px;
					color: #fff;
					z-index: 1000;
					text-align: center;
				}

				#titleBar .toggle {
					text-decoration: none;
					position: absolute;
					left: 0;
					top: 0;
					width: 80px;
					height: 60px;
					z-index: 1001;
				}

					#titleBar .toggle:before {
						-moz-osx-font-smoothing: grayscale;
						-webkit-font-smoothing: antialiased;
						display: inline-block;
						font-style: normal;
						font-variant: normal;
						text-rendering: auto;
						line-height: 1;
						text-transform: none !important;
						font-family: 'Font Awesome 6 Free';
						font-weight: 900;
					}

					#titleBar .toggle:before {
						display: inline-block;
						text-decoration: none;
						position: absolute;
						left: 0;
						top: 0;
						background: #abb0dd;
						width: 44px;
						height: 44px;
						content: '\f0c9';
						color: #fff;
						text-align: center;
						line-height: 44px;
						font-size: 20px;
					}

					#titleBar .toggle:active:before {
						background-color: #a1cd9b;
					}

			#navPanel {
				-moz-backface-visibility: hidden;
				-webkit-backface-visibility: hidden;
				-ms-backface-visibility: hidden;
				backface-visibility: hidden;
				-moz-transform: translateX(-275px);
				-webkit-transform: translateX(-275px);
				-ms-transform: translateX(-275px);
				transform: translateX(-275px);
				-moz-transition: -moz-transform 0.5s ease;
				-webkit-transition: -webkit-transform 0.5s ease;
				-ms-transition: -ms-transform 0.5s ease;
				transition: transform 0.5s ease;
				display: block;
				height: 100%;
				left: 0;
				overflow-y: auto;
				position: fixed;
				top: 0;
				width: 275px;
				z-index: 10002;
				background-color: #353c37;
				background-image: url("images/overlay.png"), -moz-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
				background-image: url("images/overlay.png"), -webkit-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
				background-image: url("images/overlay.png"), -ms-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
				background-image: url("images/overlay.png"), linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
				background-repeat: repeat, no-repeat;
				background-size: auto, 100% 100%;
				font-family: 'Open Sans Condensed', sans-serif;
				font-weight: 700;
				text-transform: uppercase;
				font-size: 1.25em;
				box-shadow: inset -3px 0px 10px 0px rgba(0, 0, 0, 0.25);
			}

				#navPanel nav {
					position: relative;
					z-index: 1000;
				}

				#navPanel .link {
					display: block;
					color: inherit;
					text-decoration: none;
					height: 44px;
					line-height: 44px;
					padding: 0 1em 0 1em;
					color: #888;
					color: rgba(255, 255, 255, 0.5);
					border-top: solid 2px rgba(87, 93, 89, 0.15);
					font-size: 0.8em;
				}

					#navPanel .link:first-child {
						border-top: 0;
					}

				#navPanel .indent-1 {
					display: inline-block;
					width: 1em;
				}

				#navPanel .indent-2 {
					display: inline-block;
					width: 2em;
				}

				#navPanel .indent-3 {
					display: inline-block;
					width: 3em;
				}

				#navPanel .indent-4 {
					display: inline-block;
					width: 4em;
				}

				#navPanel .indent-5 {
					display: inline-block;
					width: 5em;
				}

				#navPanel .depth-0 {
					color: #fff;
				}

			body.navPanel-visible #page-wrapper {
				-moz-transform: translateX(275px);
				-webkit-transform: translateX(275px);
				-ms-transform: translateX(275px);
				transform: translateX(275px);
			}

			body.navPanel-visible #titleBar {
				-moz-transform: translateX(275px);
				-webkit-transform: translateX(275px);
				-ms-transform: translateX(275px);
				transform: translateX(275px);
			}

			body.navPanel-visible #navPanel {
				-moz-transform: translateX(0);
				-webkit-transform: translateX(0);
				-ms-transform: translateX(0);
				transform: translateX(0);
			}

	}
/* ... */

